# ChangeLog for sci-chemistry/gromacs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Jan 2015; Christoph Junghans <ottxor@gentoo.org> gromacs-4.6.9999.ebuild,
  gromacs-5.0.9999.ebuild, gromacs-9999.ebuild, metadata.xml:
  Switch to CPU_FLAGS_X86 (bug #538268)

  21 Dec 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild:
  sync with gx86

  25 Nov 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-4.6.9999.ebuild,
  gromacs-5.0.9999.ebuild, gromacs-9999.ebuild:
  fixed a typo preventing AVX2 support (bug #530454)

  09 Oct 2014; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  Fix doc install

  07 Sep 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild:
  fix completion install

  06 Sep 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild:
  sync with gx86

  04 Sep 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild:
  sync with gx86

  03 Sep 2014; Christoph Junghans <ottxor@gentoo.org> -Manifest,
  -gromacs-5.0_rc1.ebuild:
  drop old

  03 Sep 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild:
  live update

  07 Jul 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-4.6.9999.ebuild,
  gromacs-5.0.9999.ebuild:
  sync with gx86, fix FEATURES=test

  26 Jun 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild:
  live ebuild update

  14 Apr 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild,
  gromacs-5.0_rc1.ebuild, gromacs-9999.ebuild, metadata.xml:
  added make-symlinks use flag, multilib-strict fix

*gromacs-5.0.9999 (08 Apr 2014)
*gromacs-5.0_rc1 (08 Apr 2014)

  08 Apr 2014; Alexey Shvetsov <alexxy@gentoo.org> +gromacs-5.0.9999.ebuild,
  +gromacs-5.0_rc1.ebuild, -gromacs-5.0_beta1.ebuild, gromacs-9999.ebuild,
  metadata.xml:
  [sci-chemistry/gromacs] New ebuilds

  05 Mar 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-9999.ebuild:
  fix multilib-strict
