@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Mar 2015; Christoph Junghans <ottxor@gentoo.org> gromacs-4.6.9999.ebuild,
+  metadata.xml:
+  removed openmm build
+
   31 Jan 2015; Christoph Junghans <ottxor@gentoo.org> gromacs-4.6.9999.ebuild,
   gromacs-5.0.9999.ebuild, gromacs-9999.ebuild, metadata.xml:
   Switch to CPU_FLAGS_X86 (bug #538268)
